--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   provider: ^6.0.5
-  firebase_core: ^2.4.1
+  firebase_core: ^2.9.0
   firebase_auth: ^4.2.5
   cloud_firestore: ^4.4.4
   cupertino_icons: ^1.0.2
@@ -51,6 +51,11 @@ dependencies:
   http: ^0.13.5
   geocoding: ^2.1.0
   geolocator: ^9.0.2
+  file_picker: ^5.2.9
+  image_picker: ^0.8.7+3
+  firebase_storage: ^11.1.0
+  flutter_file_downloader: ^1.1.2
+  path_provider: ^2.0.14
 
 dependency_overrides:
   intl: ^0.18.0
@@ -85,6 +90,8 @@ flutter:
     - assets/kauvery-1.webp
     - assets/kauvery-2.jpg
     - assets/kauvery-5.jpg
+    - assets/Images/
+    - assets/listIcons/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
